--- a/SharingPlatform/src/main/webapp/views/demand/revokeDemand.html
+++ b/SharingPlatform/src/main/webapp/views/demand/revokeDemand.html
@@ -2,11 +2,10 @@
 	
 	<script type="text/javascript" src="views/demand/revokeDemand.js?v=1"></script>
 	
-	<dl align="left" style="height: 30px;">
-		<dd id="page_tital" class="page_tital"></dd>
+	<dl align="left" class="pop_hide">
+		<dd id="page_tital" class="page_tital">需求申请</dd>
 	</dl>
-    <dl align="left" style="top: 30px;border-top:0px;">
-    	<dd id="groud_tital" class="groud_tital">需求申请</dd>
+    <dl align="left" class="pop_con">
 		<dd class="cut-offRule" ></dd>
 		<dd>
 			<font>信息资源需求部门：</font>
@@ -50,11 +49,12 @@
 				<textarea style="left:170px;width: 675px;" rows="3" id="remarkRev" placeholder="请输入说明"></textarea>
 		</dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
+	</dl>
+	<dl align="left" class="pop_foot">
 		<dd>
-			<a class="subA" href="javascript:" onclick="revDem();" style="position:absolute;width: 20%; left: 20%; ">提交</a>  
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%;right: 20%;">取消</a>  
+			<a class="subA" href="javascript:" onclick="revDem();" style="position:absolute;right:100px; ">提交</a>  
+			<a class="canA" href="javascript:" onclick="cancelPopup();" style="position:absolute;right:30px;">取消</a>  
 		</dd>
-		<dd class="cut-offRule" ></dd>
 	</dl>
 
 	
