--- a/SharingPlatform/src/main/webapp/views/demand/demandDetail.html
+++ b/SharingPlatform/src/main/webapp/views/demand/demandDetail.html
@@ -2,11 +2,11 @@
 	
 	<script type="text/javascript" src="views/demand/demandDetail.js?v=1"></script>
 	
-	<dl align="left" style="height: 30px;">
-		<dd id="page_tital" class="page_tital"></dd>
+	<dl align="left" class="pop_hide">
+		<dd id="page_tital" class="page_tital">需求申请</dd>
 	</dl>
-    <dl align="left" style="top: 30px;border-top:0px;">
-    	<dd id="groud_tital" class="groud_tital">需求申请</dd>
+    <dl align="left" class="pop_con">
+<!--     	<dd id="groud_tital" class="groud_tital">需求申请</dd> -->
 		<dd class="cut-offRule" ></dd>
 		<dd>
 			<font style="width: 126px;text-align: right;">信息资源需求部门</font>
@@ -45,10 +45,12 @@
 			<font id="saveTimeShow" style="left:600px;"></font>
 		</dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
+		
+	</dl>
+	<dl align="left" class="pop_foot">
 		<dd>
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:40% ">关闭</a>  
+			<a class="canA" href="javascript:" onclick="cancelPopup();" style="position:absolute;right:30px;">关闭</a>  
 		</dd>
-		<dd class="cut-offRule" ></dd>
 	</dl>
 
 	
