--- a/SharingPlatform/src/main/webapp/views/demand/finishVerify.html
+++ b/SharingPlatform/src/main/webapp/views/demand/finishVerify.html
@@ -2,11 +2,10 @@
 	
 	<script type="text/javascript" src="views/demand/finishVerify.js?v=1"></script>
 												    
-	<dl align="left" style="height: 30px;">
-		<dd id="page_tital" class="page_tital"></dd>
+	<dl align="left" class="pop_hide">
+		<dd id="page_tital" class="page_tital">需求申请</dd>
 	</dl>
-    <dl align="left" style="top: 30px;border-top:0px;">
-    	<dd id="groud_tital" class="groud_tital">需求申请</dd>
+    <dl align="left" class="pop_con">
 		<dd class="cut-offRule" ></dd>
 		<dd>
 			<font>信息资源需求部门：</font>
@@ -52,11 +51,13 @@
 			<font style="height: 40px;" class="redStart"></font><font style="left:40px;height: 40px;">说明：</font>
 			<textarea style="left:130px;width: 675px;" rows="3" id="demandUse" placeholder="请输入说明"></textarea>
 		</dd>
-		<dd>
-		   <a class="subA" href="javascript:" onclick="submit();" style="position:absolute;width: 20%; right:60% ">提交</a> 
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:20% ">关闭</a>  
-		</dd>
 		<dd class="cut-offRule" ></dd>
+	</dl>
+	<dl align="left" class="pop_foot">
+		<dd>
+			<a class="subA" href="javascript:" onclick="submit();" style="position:absolute;right:100px; ">提交</a>  
+			<a class="canA" href="javascript:" onclick="cancelPopup();" style="position:absolute;right:30px;">取消</a>  
+		</dd>
 	</dl>
 
 	
