历史清单完成

--- a/SharingPlatform/src/main/webapp/views/history/editHistory.html
+++ b/SharingPlatform/src/main/webapp/views/history/editHistory.html
@@ -48,7 +48,7 @@
 
 		<dd style="height: 70px;">
 			<font style="width: 126px;text-align: right;height: 50px; "><h style="left: 0px;height: 50px;" class="redStart">  </h>说明</font>
-			<textarea style="left:170px;width: 675px;" rows="3" id="h_demandUse" placeholder="请输入用途"></textarea>
+			<textarea style="left:170px;width: 675px;" rows="3" id="h_demandUse" placeholder="请输入说明"></textarea>
 		</dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
 		<dd>
