--- a/SharingPlatform/src/main/webapp/views/history/historyList.html
+++ b/SharingPlatform/src/main/webapp/views/history/historyList.html
@@ -24,7 +24,7 @@
 			<a class="btn btn-primary" href="javascript:" onclick="searchHistory();" >搜  索</a>
 		</div>
 		<div style="left:1050px;">
-			<a class="btn btn-primary" href="javascript:" onclick="editApplyPage('add','');" >添加</a>
+			<a class="btn btn-primary" href="javascript:" onclick="editHistoryPage('add','');" >添加</a>
 		</div>
 
 	</div>
