--- a/SharingPlatform/src/main/webapp/views/history/revokeHistory.html
+++ b/SharingPlatform/src/main/webapp/views/history/revokeHistory.html
@@ -10,42 +10,39 @@
 		<dd class="cut-offRule" ></dd>
 		<dd>
 			<font style="width: 126px;text-align: right;">提供部门：</font>
-			<font id="fh_provideId" style="left:170px;"></font>
+			<font id="fhr_provideId" style="left:170px;"></font>
 		</dd>
 		<dd>
 			<font style="width: 126px;text-align: right;">资源名称：</font>
-			<font id="fd_name" style="left:170px;"></font>
+			<font id="fdr_name" style="left:170px;"></font>
 
 		</dd>
 		<dd style="height: 70px;">
-			<font style="height: 50px;width: 126px;text-align: right;">需求内容：<br>（须细化到数据项）</font>
-			<textarea class="textareaShow" style="left:170px;width: 675px;"  rows="3" id="ft_textareaShow" readonly="readonly" ></textarea>
+			<font style="height: 50px;width: 126px;text-align: right;">需求内容：</font>
+			<textarea class="textareaShow" style="left:170px;width: 675px;"  rows="3" id="ftr_textareaShow" readonly="readonly" ></textarea>
 		</dd>
 		<dd>
 			<font style="width: 126px;text-align: right;">数据周期：</font>
-			<font id="ft_timeT" style="left:170px;"></font>
+			<font id="ftr_timeT" style="left:170px;"></font>
 		</dd>
-		<dd>
-			<font style="width: 126px;text-align: right;">备注：</font>
-			<font id="ft_use" style="left:170px;"></font>
-		</dd>
-		<dd style="height: 70px;">
-			<font style="height: 40px;width: 126px;text-align: right;">处理结果：</font>
-			<font id="ft_result" style="left:170px;"></font>
+
+		<dd >
+			<font style="width: 126px;text-align: right;">处理结果：</font>
+			<font id="ftr_result" style="left:170px;"></font>
 		</dd>
 
 		<dd style="height: 70px;">
 			<font style="height: 40px;width: 126px;text-align: right;">处理说明：</font>
-			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="ft_resultUse" readonly="readonly"></textarea>
+			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="ftr_resultUse" readonly="readonly"></textarea>
 		</dd>
 		<dd>
 			<font style="width: 126px;text-align: right;">处理人：</font>
-			<font id="ft_createrNameShow" style="left:170px;width:200px;"></font>
+			<font id="ftr_createrNameShow" style="left:170px;width:200px;"></font>
 			<font style="left:460px;">处理时间：</font>
-			<font id="ft_saveTimeShow" style="left:600px;"></font>
+			<font id="ftr_saveTimeShow" style="left:600px;"></font>
 		</dd>	
 			
-		<dd id="groud_tital" class="groud_tital">历史清单</dd>
+		<dd id="groud_tital" class="groud_tital">撤销</dd>
 		<dd class="cut-offRule" ></dd>
 		
 
