--- a/SharingPlatform/src/main/webapp/views/history/findHistory.html
+++ b/SharingPlatform/src/main/webapp/views/history/findHistory.html
@@ -9,33 +9,30 @@
     	<dd id="groud_tital" class="groud_tital">历史清单</dd>
 		<dd class="cut-offRule" ></dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">提供部门</font>
+			<font style="width: 126px;text-align: right;">提供部门：</font>
 			<font id="fh_provideId" style="left:170px;"></font>
 		</dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">资源名称</font>
+			<font style="width: 126px;text-align: right;">资源名称：</font>
 			<font id="fd_name" style="left:170px;"></font>
 
 		</dd>
 		<dd style="height: 70px;">
-			<font style="height: 50px;width: 126px;text-align: right;">需求内容<br>（须细化到数据项）</font>
+			<font style="height: 50px;width: 126px;text-align: right;">需求内容：</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;"  rows="3" id="ft_textareaShow" readonly="readonly" ></textarea>
 		</dd>
 		<dd>
 			<font style="width: 126px;text-align: right;">数据周期：</font>
 			<font id="ft_timeT" style="left:170px;"></font>
 		</dd>
-		<dd>
-			<font style="width: 126px;text-align: right;">备注：</font>
-			<font id="ft_use" style="left:170px;"></font>
-		</dd>
-		<dd style="height: 70px;">
-			<font style="height: 40px;width: 126px;text-align: right;">处理结果：</font>
+
+		<dd >
+		<font style="width: 126px;text-align: right;">处理结果：</font>
 			<font id="ft_result" style="left:170px;"></font>
 		</dd>
 
 		<dd style="height: 70px;">
-			<font style="height: 40px;width: 126px;text-align: right;">处理说明：</font>
+			<font style="height: 40px;width: 126px;text-align: right;">说明：</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="ft_resultUse" readonly="readonly"></textarea>
 		</dd>
 		<dd>
@@ -44,6 +41,23 @@
 			<font style="left:460px;">处理时间：</font>
 			<font id="ft_saveTimeShow" style="left:600px;"></font>
 		</dd>		
+		
+		
+		<dd id="rollback_tital" class="groud_tital">撤销操作</dd>
+		<dd class="cut-offRule" ></dd>
+		<dd id="rollback">
+			<font style="width: 126px;text-align: right;">撤销人：</font>
+			<font id="fr_revokePeople" style="left:170px;width:200px;"></font>
+			<font style="left:460px;">撤销时间：</font>
+			<font id="fr_revokeTime" style="left:600px;"></font>
+		</dd>	
+		
+		<dd style="height: 70px;" id="rollbackM">
+			<font style="height: 40px;width: 126px;text-align: right;">撤销说明：</font>
+			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="ft_backout" readonly="readonly"></textarea>
+		</dd>
+		
+		
 		<dd>
 			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:40% ">关闭</a>  
 		</dd>
